* Improve: update info text after registration sent in meeting register.
* Improve: update return to event link text in meeting register.
* Improve: replace URLs in info text with 'this website' in meeting register.
* Improve: update text for cancel link and fix center align.
* Improve: create account position in meeting register for different screens.
  [GhitaB #97529]

6.2 - (2018-12-11)
------------------
* No changes. It just happened. :)

6.1 - (2018-12-11)
------------------
* Improve: items listing in meeting view by case public vs workspace.
  [GhitaB #97529]
* Fix: Remove old unused solution for downloading land files.
  [GhitaB #100472]

6.0 - (2018-12-05)
------------------
* Improve: add new column Request data deletion in subscribers view.
  [GhitaB #99958]
* Fix: js error for loading message in map view of landitems.
  [GhitaB #99772]
* Feature: Add matomo custom event on landfile download.
  [GhitaB #100472]
* Feature: Added external templates for land.copernicus search
  [iulianpetchesi #99788]
* Improve: Update text for closed registration case in meeting view.
* Improve: update disclaimer field label in meeting register.
* Feature: add new field request_data_deletion for subscribers.
  [GhitaB #97529]

5.9 - (2018-11-26)
------------------
* Improve: Add captcha field in meeting register form.
  Manual step: activate Captcha widget 1.0.3.
  [GhitaB #99957]

5.8 - (2018-11-26)
------------------
* Improve: Get rid of Google reCAPTCHA.
  Manual step: deactivate recaptcha add-ons before deploy.
  [GhitaB #99944]

5.7 - (2018-11-21)
------------------
* Improve: add 'E-pass is required' field to meeting schema. Add allow From, To
  fields to meeting schema.
  [GhitaB #99956]
* Improve: Update text on registration sent. Change text label for Role field
  and define its possible values. Get rid of Visa and Reimbursed fields.
  Update form (texts, styles), add disclaimer. Add script for deleting old